# io-avstats

./: .buildinfo  .dockerignore  .gitignore  .pylintrc  .settings.io_aero.toml  .settings.io_avstats.toml  2023_10_01_log_avall.html  2023_10_01_log_up01OCT.html  2023_10_08_log_up08OCT.html  2023_10_15_log_up15OCT.html  2023_10_22_log_up22OCT.html  2023_11_01_log_avall.html  2023_11_01_log_up01NOV.html  2023_11_08_log_up08NOV.html  2023_11_15_log_up15NOV.html  2023_11_22_log_up22NOV.html  2023_12_04_log_avall.html  2023_12_04_log_up01DEC.html  2023_12_08_log_up08DEC.html  2023_12_15_log_up15DEC.html  2023_12_22_log_up22DEC.html  2024_01_01_log_avall.html  2024_01_01_log_up01JAN.html  2024_01_08_log_up08JAN.html  2024_01_15_log_up15JAN.html  2024_01_22_log_up22JAN.html  2024_02_01_log_avall.html  2024_02_01_log_up01FEB.html  2024_02_08_log_up08FEB.html  2024_02_15_log_up15FEB.html  2024_02_22_log_up22FEB.html  2024_03_01_log_avall.html  2024_03_01_log_up01MAR.html  2024_03_08_log_up08MAR.html  2024_03_15_log_up15MAR.html  2024_03_22_log_up22MAR.html  2024_04_01_log_avall.html  2024_04_01_log_up01APR.html  2024_04_08_log_up08APR.html  2024_04_15_log_up15APR.html  (+82 more)
.streamlit/: README.md  config.toml  config.toml.ae1982  config.toml.pd1982  config.toml.slara  config.toml.stats  credentials.toml  secrets.toml  secrets.toml_  secrets_4_dockerfile.toml
__archive__/: 2023_09_22_log_up22SEP.html
_sources/: 2023_10_08_log_up08OCT.md.txt  2023_11_22_log_up22NOV.md.txt  2023_12_04_log_up01DEC.md.txt  2024_02_08_log_up08FEB.md.txt  2024_03_08_log_up08MAR.md.txt  2024_03_15_log_up15MAR.md.txt  2024_04_01_log_avall.md.txt  2024_04_01_log_up01APR.md.txt  2024_04_15_log_up15APR.md.txt  LICENSE.rst.txt  data_master_logs.rst.txt  data_transaction_logs.rst.txt  first_steps.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  modules.rst.txt  release_notes.rst.txt  requirements.rst.txt
_static/: documentation_options.js
apps/: export_fatalities_latlon.py
cloud_old/: README.md  docker-compose_cloud.yml  docker-compose_local.yml  dockerfile
config/: .pylintrc  .settings.io_avstats_4_dockerfile.toml  Pipfile.ae1982  Pipfile.members  Pipfile.pd1982  Pipfile.slara  config.toml.ae1982  config.toml.members  config.toml.pd1982  config.toml.slara  config.toml.stats  docker-compose_cloud.yml  docker-compose_local.yml  dockerfile  environment.yml  environment_dev.yml  environment_streamlit.yml  nginx.conf  secrets_4_dockerfile.toml  settings.io_aero_4_dockerfile.toml  settings.io_avstats_4_dockerfile.toml
data/: README.md
data_master/: pre2008_01_s_d_c_23_08_21.html  pre2008_02_c_d_s_23_08_21.html  pre2008_03_u_d_s_23_08_21.html  pre2008_11_a_o_c_23_08_21.html  pre2008_12_l_a_p.html  pre2008_13_l_c_s_23_08_21.html  pre2008_14_l_s_e_23_08_21.html  pre2008_21_l_s_d_23_08_21.html  pre2008_22_l_z_d.html
data_transaction/: 2023_10_01_log_avall.html  2023_10_01_log_up01OCT.html  2023_10_08_log_up08OCT.html  2023_10_15_log_up15OCT.html  2023_10_22_log_up22OCT.html  2023_11_01_log_avall.html  2023_11_01_log_up01NOV.html  2023_11_08_log_up08NOV.html  2023_11_15_log_up15NOV.html  2023_11_22_log_up22NOV.html  2023_12_04_log_avall.html  2023_12_04_log_up01DEC.html  2023_12_08_log_up08DEC.html  2023_12_15_log_up15DEC.html  2023_12_22_log_up22DEC.html  2024_01_01_log_avall.html  2024_01_01_log_up01JAN.html  2024_01_08_log_up08JAN.html  2024_01_15_log_up15JAN.html  2024_01_22_log_up22JAN.html  2024_02_01_log_avall.html  2024_02_01_log_up01FEB.html
docs/: 2023_02_01_log_Pre2008.md  2023_04_03_log_avall.md  2023_04_08_log_up08APR.md  2023_04_15_log_up15APR.md  2023_04_22_log_up22APR.md  2023_05_01_log_avall.md  2023_05_01_log_up01MAY.md  2023_05_08_log_up08MAY.md  2023_05_15_log_up15MAY.md  2023_05_22_log_up22MAY.md  2023_06_01_log_avall.md  2023_06_01_log_up01JUN.md  2023_06_08_log_up08JUN.md  2023_06_15_log_up15JUN.md  2023_06_20_log_Pre2008.md  2023_07_01_log_avall.md  2023_07_01_log_up01JUL.md  2023_07_08_log_up08JUL.md  2023_07_15_log_up15JUL.md  2023_07_22_log_up22JUL.md  2023_08_21_log_Pre2008.md  2023_09_01_log_avall.md  2023_09_01_log_up01SEP.md  2023_09_08_log_up08SEP.md  2023_09_15_log_up15SEP.md  2023_10_08_log_up08OCT.md  2023_10_22_log_up22OCT.md  2023_11_01_log_avall.md  2023_11_01_log_up01NOV.md  2023_11_08_log_up08NOV.md  2023_11_15_log_up15NOV.md  2023_12_04_log_up01DEC.md  2023_12_08_log_up08DEC.md  2023_12_22_log_up22DEC.md  2024_01_08_log_up08JAN.md  README.md  api_reference.md  config_io_avstats.md  config_logging.md  data_analyis_aaus1982.md  (+22 more)
download/: IO-AVSTATS-DB.docx
img/: README.html
ioavstats/: Menu.py  Menu.pyi  README.md  __init__.py  ae1982.py  avstats.py  avstats.pyi  code_generator.py  code_generator.pyi  db_ddl_base.py  db_ddl_base.pyi  db_dml_base.py  db_dml_base.pyi  db_dml_corr.py  db_dml_corr.pyi  db_dml_msaccess.py  db_dml_msaccess.pyi  glob.py  glob_local.py  glob_local.pyi  members.py  pd1982.py  slara.py  start.py  user_guide.py  user_guide.pyi  utils.py  utils.pyi  utils_msaccess.py  utils_msaccess.pyi
libs/: README.md  io_avstats_db-1.0.0-py3-none-any.whl
master_logs/: pre2008_01_s_d_c_23_08_21.html  pre2008_02_c_d_s.html  pre2008_02_c_d_s_23_08_21.html  pre2008_03_u_d_s_23_08_21.html  pre2008_11_a_o_c.html  pre2008_11_a_o_c_23_08_21.html  pre2008_12_l_a_p.html  pre2008_13_l_c_s.html  pre2008_13_l_c_s_23_08_21.html  pre2008_14_l_s_e.html  pre2008_14_l_s_e_23_08_21.html  pre2008_21_l_s_d.html  pre2008_21_l_s_d_23_08_21.html  pre2008_22_l_z_d.html
resources/: Port Definitions.xlsx  README.md
scripts/: README.md  __init__.py  entrypoint.sh  launcher.py  run_cloud_files_zip.bat  run_cloud_files_zip.sh  run_cloud_setup_instance.sh  run_cloud_setup_instance.zsh  run_create_image.bat  run_create_image.sh  run_create_image.zsh  run_delete_postgresql_container.bat  run_delete_postgresql_container.sh  run_delete_postgresql_container.zsh  run_delete_postgresql_files.bat  run_delete_postgresql_files.sh  run_delete_postgresql_files.zsh  run_docker_compose.bat  run_docker_compose.sh  run_docker_compose_cloud.bat  run_docker_compose_cloud.sh  (+35 more)
(+491 files in other folders)
