[project]
authors = [
    { name = "Team IO-Aero", email = "info@io-aero.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "haversine",
    "iocommon",
    "lat_lon_parser",
    "mlxtend",
    "numpy",
    "openpyxl",
    "pandas",
    "plotly",
    "psycopg2-binary",
    "pyeclat",
    "pyodbc",
    "requests",
    "sqlalchemy",
    "streamlit",
 #  "streamlit-pandas-profiling", # not yet available for 'make docs'
    "tomli",
    "tomli-w",
    "virtualenv",
    "xlrd",
    "ydata-profiling",
]
description = "Aviation Accident Statistics"
keywords = [
    "accidents",
    "application",
    "aviation",
    "ntsb",
    "statistics",
]
maintainers = [
    { name = "Team IO-Aero", email = "info@io-aero.ch" },
]
name = "ioavstats"
readme = "README.md"
requires-python = ">=3.11"
version = "24.03.22"

[project.urls]
"Bug Tracker" = "https://github.com/io-aero/io-avstats/issues"
Homepage = "https://github.com/io-aero/io-avstats"
Source = "https://github.com/io-aero/io-avstats/tree/main/ioavstats"

[tool.bandit]
skips = [
    "B101",
	"B307",
	"B404",
	"B603",
	"B608",
]

[tool.docformatter]
black = true
blank = true
recursive = true
wrap-descriptions = 100
wrap-summaries = 100

[tool.pytest.ini_options]
console_output_style = "count"
markers = [
    "issue",
]
norecursedirs = "./tests/helpers"
pythonpath = "./ioavstats/"
testpaths = "./tests/"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".history",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    "build",
    "ioavstats.egg-info",
    "temp",
]

# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["ALL"]
ignore = [
    "C901",
    "D211",
    "D213",
    "D407",
    "PGH003",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW0603",
    "S101",
    "S603",
    "S608",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"docs/source/conf.py" = ["D203"]
"ioavstats/db_ddl_base.py" = ["E501"]
"ioavstats/db_dml_corr.py" = ["E501"]
"ioavstats/db_dml_msaccess.py" = ["E501"]
"ioavstats/Menu.py" = ["E501"]
"ioavstats/pages/Association_Rule_Analysis.py" = ["E501"]
"ioavstats/pages/Aviation_Event_Analysis.py" = ["E501"]
"ioavstats/pages/Database_Profiling.py" = ["E501"]
"ioavstats/user_guide.py" = ["E501"]

[tool.vulture]
make_whitelist = true
min_confidence = 100
