[project]
authors = [
    { name = "Team IO-Aero", email = "info@io-aero.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "haversine",
    "iocommon",
    "lat_lon_parser",
    "mlxtend",
    "numpy",
    "openpyxl",
    "pandas",
    "plotly",
    "psycopg2-binary",
    "pyeclat",
    "pyodbc",
    "requests",
    "sqlalchemy",
    "streamlit",
 #  "streamlit-pandas-profiling", # not yet available for 'make docs'
    "tomli",
    "tomli-w",
    "virtualenv",
    "xlrd",
    "ydata-profiling",
]
description = "Aviation Accident Statistics"
keywords = [
    "accidents",
    "application",
    "aviation",
    "ntsb",
    "statistics",
]
maintainers = [
    { name = "Team IO-Aero", email = "info@io-aero.ch" },
]
name = "ioavstats"
readme = "README.md"
requires-python = ">=3.10"
version = "24.11.08"

[project.urls]
"Bug Tracker" = "https://github.com/io-aero/io-avstats/issues"
Homepage = "https://github.com/io-aero/io-avstats"
Source = "https://github.com/io-aero/io-avstats/tree/main/ioavstats"

[tool.bandit]
skips = [
    "B101",
	"B307",
	"B404",
	"B603",
	"B608",
]

[tool.docformatter]
black = true
blank = true
recursive = true
wrap-descriptions = 100
wrap-summaries = 100

[tool.pytest.ini_options]
console_output_style = "count"
markers = [
    "issue",
]
norecursedirs = "./tests/helpers"
pythonpath = "./ioavstats/"
testpaths = "./tests/"

[tool.ruff]
exclude = [
    ".git",
    ".history",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    "build",
    "ioavstats.egg-info",
    "temp",
]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "C901",
    "D211",
    "D213",
    "D407",
    "PGH003",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW0603",
    "S101",
    "S603",
    "S608",
]
fixable = [
    "ALL",
]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"docs/source/conf.py" = ["D203"]
"ioavstats/db_ddl_base.py" = ["E501"]
"ioavstats/db_dml_corr.py" = ["E501"]
"ioavstats/db_dml_msaccess.py" = ["E501"]
"ioavstats/Menu.py" = ["E501"]
"ioavstats/pages/Association_Rule_Analysis.py" = ["E501"]
"ioavstats/pages/Aviation_Event_Analysis.py" = ["E501"]
"ioavstats/pages/Database_Profiling.py" = ["E501"]
"ioavstats/user_guide.py" = ["E501"]

[tool.vulture]
make_whitelist = true
min_confidence = 100
